# aegear

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  aegear-gui.spec  calibration.ipynb  data_collection.json  mazetracking.py  objhandler.py  pyproject.toml  requirements.txt  setup.py
apps/: calibration.py  fishtracker.py  mazecalibration.py  mazetracking.py  motiondetection.py  trainingdataextraction.py  trajectory.py
config/: calibration.xml  calibration_descriptor.json  data_collection.json
data/: calibration.xml  corners.npy  maze_significant_vertices.csv  model_cnn3.pth  model_cnn4.pth  model_cnn4_no_pebbles.pth  model_cnn4_pebbles.pth  model_cnn4_v1.pth  model_cnn4_v2.pth  svc.pickle
data/models/: model_cnn4_v2.pth  (+5 more)
maze/: blockmatching.py  calibration.py  classifier.py  datasets.py  mazecalibration.py  models.py  motiondetection.py  svmtraining.py  tracker.py  tracking.py  trainingdataextraction.py  trajectory.py  utils.py
media/: icon.icns
notebooks/: calibration.ipynb  coco_heatmap_flag_bad_data.ipynb  coco_merge_two_bases.ipynb  dataset_caching.ipynb  tracking_benchmark.ipynb  training.ipynb  training_cnn_classifier.ipynb  training_efficientnet_b0_pretraining.ipynb  training_efficientnet_unet.ipynb  training_mask_rcnn.ipynb  training_sequence_net.ipynb  training_siamese.ipynb  training_siamese_tracker.ipynb  training_unet.ipynb
src/: blockmatching.py  classifier.py  mazeoutline.py  svmtraining.py  tracking.py  trainingdataextraction.py
tools/: cache_detection_dataset.py  calibration.py  trainingdataextraction.py
(+15 files in other folders)
