[project]
name = "aegear"
version = "0.1.0"
description = "Computer vision toolkit for fish tracking and behavioral analysis in aquaculture research environments."
authors = [
    { name = "Relja Ljubobratovic", email = "ljubobratovic.relja@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "moviepy>=2.1.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "Pillow>=9.2.0,<11.0.0",
    "scipy>=1.11.0",
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
]

[project.optional-dependencies]
dev = ["kornia>=0.8.0", "tqdm>=4.65.0"]

[project.urls]
Homepage = "https://github.com/ljubobratovicrelja/aegear"
Repository = "https://github.com/ljubobratovicrelja/aegear"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
